--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -1,3 +1,10 @@
+## Version 1.1.3
+
+### 🐛 Bug Fixes
+- Fixed paid boost spam: if a player boosts through multiple milestones at once, only the highest milestone is congratulated instead of every one
+
+---
+
 ## Version 1.1.2
 
 ### 🔧 The Burning Crusade Classic - Milestone Level-Up Tracking
